2012-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Version 1.8.0!

	* src/Projections/UnstableFinalState.cc: Fix compiler warning.

	* Version bump for testing: 1.8.0beta1.

	* src/Core/AnalysisInfo.cc: Add printout of YAML parser exception error messages to aid debugging.

	* bin/Makefile.am: Attempt to fix rivet-nopy build on SLC5.

	* src/Analyses/LHCB_2010_S8758301.cc: Add two missing entries to the PDGID -> lifetime map.

	* src/Projections/UnstableFinalState.cc: Extend list of vetoed particles to include reggeons.

2012-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Version change to 1.8.0beta0 -- nearly ready for long-awaited release!

	* pyext/setup.py.in: Adding handling for the YAML library: fix for
	Genser build from Anton Karneyeu.

	* src/Analyses/LHCB_2011_I917009.cc: Hiding lifetime-lookup error
	message if the offending particle is not a hadron.

	* include/Rivet/Math/MathHeader.hh: Using unnamespaced std::isnan
	and std::isinf as standard.

2012-03-16  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Improve default plot behaviour for 2D histograms

2012-03-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Make ATLAS_2012_I1084540 less verbose, and general code
	cleanup of that analysis.
	* New-style plugin hook in ATLAS_2011_I926145,
	ATLAS_2011_I944826 and ATLAS_2012_I1084540
	* Fix compiler warnings in ATLAS_2011_I944826 and CMS_2011_S8973270
	* CMS_2011_S8941262: Weights are double, not int.
	* disable inRange() tests in test/testMath.cc until we have a proper
	fix for the compiler warnings we see on SL5.

2012-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Marking ATLAS_2011_I919017 as VALIDATED (this should have
	happened a long time ago) and adding more references.

2012-02-28  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* lighthisto.py: Caching for re.compile(). This speeds up aida2flat
	and flat2aida by more than an order of magnitude.

2012-02-27  Andy Buckley  <andy.buckley@cern.ch>
