@@ -188,6 +188,7 @@ dist_pkgdata_DATA = \
   STAR_2008_S7993412.info \
   STAR_2009_UE_HELEN.info \
   TASSO_1990_S2148048.info \
+  TOTEM_2012_DNDETA.info \
   ZEUS_2001_S4815815.info \
   UA1_1990_S2044935.info \
   UA5_1982_S875503.info \
