@@ -1,0 +1,26 @@
+Name: TOTEM_2012_DNDETA
+Year: 2012
+Summary: Forward dN/deta at 7 TeV
+Experiment: TOTEM
+Collider: LHC
+#InspireID: 
+Status: VALIDATED
+Authors:
+ - Hendrik Hoeth <hendrik.hoeth@cern.ch>
+References:
+ - CERN-PH-EP-2012-106
+ - TOTEM 2012-01
+RunInfo:
+  pp QCD interactions at 900 GeV and 7 TeV.
+NumEvents: 1000000
+NeedCrossSection: no
+Beams: [p+, p+]
+Energies: [7000]
+PtCuts: [0]
+Description:
+  'The TOTEM experiment has measured the charged particle pseudorapidity
+  density $dN_\text{ch}/d\eta$ in pp collisions at $\sqrt{s} = 7$\,TeV
+  for $5.3 < |\eta| < 6.4$ in events with at least one charged particle
+  with transverse momentum above 40 MeV/c in this pseudorapidity range.'
+BibKey: 
+BibTeX: ''
