@@ -1,0 +1,6 @@
+# BEGIN PLOT /TOTEM_2012_DNDETA/d01-x01-y01
+Title=Charged particle $|\eta|$ at 7\,TeV, track $p_\perp>40$\,MeV, for $N_\text{ch}\ge1$
+XLabel=$|\eta|$
+YLabel=$dN/d\eta$
+LogY=0
+# END PLOT
