@@ -171,5 +171,6 @@ dist_pkgdata_DATA = \
   SLD_2002_S4869273.aida \
   SLD_2004_S5693039.aida \
   STAR_2008_S7869363.aida \
+  TOTEM_2012_DNDETA.aida \
   PDG_HADRON_MULTIPLICITIES.aida \
   PDG_HADRON_MULTIPLICITIES_RATIOS.aida
