@@ -1,0 +1,84 @@
+<?xml version="1.0" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.1" package="Rivet"/>
+  <dataPointSet name="d01-x01-y01" dimension="2"
+      path="/REF/TOTEM_2012_DNDETA" title="">
+    <annotation>
+      <item key="Title" value="" sticky="true"/>
+      <item key="AidaPath" value="/REF/TOTEM_2012_DNDETA/d01-x01-y01" sticky="true"/>
+    </annotation>
+  <dataPoint>
+    <measurement value="5.375000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.840000e+00" errorPlus="3.700000e-01" errorMinus="3.700000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.425000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.640000e+00" errorPlus="3.800000e-01" errorMinus="3.800000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.625000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.540000e+00" errorPlus="3.300000e-01" errorMinus="3.300000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.675000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.500000e+00" errorPlus="3.200000e-01" errorMinus="3.200000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.725000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.400000e+00" errorPlus="3.000000e-01" errorMinus="3.000000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.775000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.420000e+00" errorPlus="3.100000e-01" errorMinus="3.100000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.825000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.320000e+00" errorPlus="2.900000e-01" errorMinus="2.900000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.875000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.270000e+00" errorPlus="2.900000e-01" errorMinus="2.900000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.925000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.200000e+00" errorPlus="2.800000e-01" errorMinus="2.800000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="5.975000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.070000e+00" errorPlus="2.700000e-01" errorMinus="2.700000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.025000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="3.040000e+00" errorPlus="2.600000e-01" errorMinus="2.600000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.075000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.940000e+00" errorPlus="2.600000e-01" errorMinus="2.600000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.125000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.800000e+00" errorPlus="2.500000e-01" errorMinus="2.500000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.175000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.740000e+00" errorPlus="2.600000e-01" errorMinus="2.600000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.225000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.650000e+00" errorPlus="2.400000e-01" errorMinus="2.400000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.275000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.580000e+00" errorPlus="2.300000e-01" errorMinus="2.300000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.325000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.530000e+00" errorPlus="2.100000e-01" errorMinus="2.100000e-01"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="6.375000e+00" errorPlus="2.500000e-02" errorMinus="2.500000e-02"/>
+    <measurement value="2.380000e+00" errorPlus="2.100000e-01" errorMinus="2.100000e-01"/>
+  </dataPoint>
+  </dataPointSet>
+</aida>
