@@ -1,0 +1,20 @@
+# BEGIN HISTOGRAM /REF/TOTEM_2012_DNDETA/d01-x01-y01
+5.35	5.40	3.84	0.37
+5.40	5.45	3.64	0.38
+5.60	5.65	3.54	0.33
+5.65	5.70	3.50	0.32
+5.70	5.75	3.40	0.30
+5.75	5.80	3.42	0.31
+5.80	5.85	3.32	0.29
+5.85	5.90	3.27	0.29
+5.90	5.95	3.20	0.28
+5.95	6.00	3.07	0.27
+6.00	6.05	3.04	0.26
+6.05	6.10	2.94	0.26
+6.10	6.15	2.80	0.25
+6.15	6.20	2.74	0.26
+6.20	6.25	2.65	0.24
+6.25	6.30	2.58	0.23
+6.30	6.35	2.53	0.21
+6.35	6.40	2.38	0.21
+# END HISTOGRAM
